--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,5 +1,11 @@
+:host {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
 mat-form-field.mat-form-field {
   min-width: 250px;
   font-size: 14px;
-  margin-right: 20px;
+  font-weight: 300;
 }
