--- a/src/app/components/note/note.component.scss
+++ b/src/app/components/note/note.component.scss
@@ -6,3 +6,11 @@
 .note-wrapper {
   max-width: 400px;
 }
+
+.dates {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 100%;
+  margin-top: 40px;
+}
