--- a/src/app/components/note-details/note-details.component.scss
+++ b/src/app/components/note-details/note-details.component.scss
@@ -1,5 +1,10 @@
 mat-card {
-  margin: 40px;
+  position: fixed;
+  top: 20%;
+  left: calc(50% - 440px);
+  z-index: 3;
+  width: 800px;
+  padding: 20px 50px;
 }
 
 mat-form-field {
