Implemented search functionality

--- a/src/app/components/notes/notes.component.html
+++ b/src/app/components/notes/notes.component.html
@@ -1,6 +1,6 @@
 <div class="notes-wrapper">
   <fon-note
-    *ngFor="let note of notes" [note]="note"
+    *ngFor="let note of filteredNotes" [note]="note"
     (editClicked)="onEditClicked($event)"
     (deleteClicked)="onDeleteClicked($event)">
   </fon-note>
