--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input matInput placeholder="Search notes" [(ngModel)]="searchTerm">
+  <input matInput placeholder="Search notes" [(ngModel)]="searchTerm" (ngModelChange)="onSearchInputUpdate($event)">
 </mat-form-field>
 <div class="icon-button" role="button" (click)="onSearchClick()">
   <i class="material-icons" title="Search">search</i>
