--- a/src/app/components/notes/notes.component.html
+++ b/src/app/components/notes/notes.component.html
@@ -1,3 +1,5 @@
+<fon-filters (filterUpdated)="onFilterUpdated($event)"></fon-filters>
+
 <div class="notes-wrapper">
   <fon-note
     *ngFor="let note of filteredNotes" [note]="note"
