--- a/src/app/components/notes/notes.component.html
+++ b/src/app/components/notes/notes.component.html
@@ -1,4 +1,4 @@
-<fon-filters (filterUpdated)="onFilterUpdated($event)"></fon-filters>
+<fon-filters (filtersChanged)="onFiltersChanged($event)"></fon-filters>
 
 <div class="notes-wrapper">
   <fon-note
